chore: ignore public/content and update ingestion to scan PDFs; add dotenv

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local content PDFs (do not commit)
+public/content/
+public/Content/
