--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rag:ingest": "node scripts/ingest-structured.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "next": "15.5.0",
