--- a/package.json
+++ b/package.json
@@ -11,28 +11,29 @@
     "rag:ingest": "node scripts/ingest-structured.js"
   },
   "dependencies": {
+    "@google/genai": "^1.15.0",
     "dotenv": "^16.4.5",
+    "katex": "^0.16.11",
+    "lucide-react": "^0.474.0",
+    "mongodb": "^6.9.0",
+    "next": "15.5.0",
+    "openai": "^4.67.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0",
-    "mongodb": "^6.9.0",
-    "openai": "^4.67.3",
     "react-markdown": "^9.0.1",
-    "remark-math": "^6.0.0",
     "rehype-katex": "^7.0.0",
-    "katex": "^0.16.11",
-    "lucide-react": "^0.474.0"
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
