Improve RAG system: enhanced chunking, problem label detection, and system prompt updates
- Updated system prompt to explicitly mention 2 course documents per chapter
- Enhanced problem label detection and boosting in embedding search
- Created professional ingestion script (scripts/ingest-chapter.js) with best practices:
  * Problem-aware chunking for exercises
  * Multi-strategy fallback (problem labels â†’ paragraphs â†’ sentences)
  * Overlapping chunks for context preservation
  * Error handling with retry logic
- Re-ingested Chapter 3 with improved chunking (18 chunks: 10 Notes + 8 Exercises)
- Updated .gitignore to exclude test scripts but keep permanent ingestion script
- Fixed chapter isolation to ensure only chapter-specific sources are searched

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,13 @@ next-env.d.ts
 # local content PDFs (do not commit)
 public/content/
 public/Content/
+
+# test/verification scripts (local testing only)
+scripts/verify-*.js
+scripts/test-*.js
+scripts/cleanup-*.js
+scripts/remove-*.js
+scripts/find-*.js
+scripts/check-*.js
+scripts/add-*.js
+scripts/reingest-*.js
