Fix custom tutor RAG search and UI: Add source field to embeddings, match UI to regular tutor, add loading overlay

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ scripts/find-*.js
 scripts/check-*.js
 scripts/add-*.js
 scripts/reingest-*.js
+scripts/delete-*.js
+
+# pdf-parse test directory (created automatically)
+/test/
